--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": "6283834558105@s.whatsapp.net", 
-    "ownerName": "Lexxy Official", 
-    "botName": "Neobot",
-    "footer": "© BOTMD | 2022", 
+    "ownerNumber": "6281586087102@s.whatsapp.net", 
+    "ownerName": "Ryaa Ftrhmn", 
+    "botName": "JsaaBot",
+    "footer": "© JSAA | 2022", 
     "sessionName": "session", 
     "pathimg": "./media/logo.jpg", 
     "pathqris": "./media/qris.jpg",
